--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,17 +18,17 @@ tools:context=".MainActivity">
     <Button
         android:id="@+id/btnStart"
         android:layout_width="128dp"
-        android:layout_height="37dp"
+        android:layout_height="48dp"
         android:layout_below="@+id/tvMainTitle"
         android:layout_alignEnd="@+id/btnStop"
         android:layout_alignRight="@+id/btnStop"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="153dp"
-        android:layout_marginLeft="153dp"
-        android:layout_marginTop="342dp"
-        android:layout_marginEnd="-19dp"
-        android:layout_marginRight="-19dp"
+        android:layout_marginStart="157dp"
+        android:layout_marginLeft="157dp"
+        android:layout_marginTop="379dp"
+        android:layout_marginEnd="-22dp"
+        android:layout_marginRight="-22dp"
         android:text="Start" />
 
     <Button
@@ -40,7 +40,7 @@ tools:context=".MainActivity">
         android:layout_alignParentLeft="true"
         android:layout_marginStart="174dp"
         android:layout_marginLeft="174dp"
-        android:layout_marginTop="73dp"
+        android:layout_marginTop="-116dp"
         android:onClick="onClick"
         android:text="Stop" />
 
@@ -49,9 +49,9 @@ tools:context=".MainActivity">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnStart"
-        android:layout_marginStart="-92dp"
-        android:layout_marginLeft="-92dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginStart="-85dp"
+        android:layout_marginLeft="-85dp"
+        android:layout_marginTop="103dp"
         android:layout_toEndOf="@+id/tvSampleResolutionText"
         android:layout_toRightOf="@+id/tvSampleResolutionText"
         android:text="Idle"
@@ -65,12 +65,14 @@ tools:context=".MainActivity">
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="121dp"
-        android:layout_marginLeft="-28dp"
-        android:layout_marginTop="639dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginStart="115dp"
+        android:layout_marginLeft="-89dp"
+        android:layout_marginTop="596dp"
+        android:layout_marginEnd="85dp"
         android:ems="10"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/tvSampleResolutionText"
@@ -79,9 +81,9 @@ tools:context=".MainActivity">
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="146dp"
-        android:layout_marginLeft="146dp"
-        android:layout_marginBottom="103dp"
+        android:layout_marginStart="141dp"
+        android:layout_marginLeft="141dp"
+        android:layout_marginBottom="42dp"
         android:text="Sample Resolution"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
